# tenku

./: .clang-format  .gitignore  CMakeHelpers.cmake  CMakeLists.txt  CMakeSettings.json  README.md
cmake/: CMakeHelpers.cmake  SDL.cmake
scripts/: build_sdl.bat  code_format.bat
src/: main.cpp
src/app/: tenku.cpp  tenku.h
src/core/: macros.h  singleton.h  system.h
src/core/threading/: event.cpp  event.h  spinlock.cpp  spinlock.h  thread.cpp  thread.h
